# pytest

./: .flake8  .gitignore  aa.py  pyproject.toml  pytest.ini
pytest_result_sender/: __init__.py
src/pytest_result_sender/: __init__.py  plugin.py
src/tests/: __init__.py  test_ini.py
tests/: test_abc.py
