[project]
name = "pytest-result-sender"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "dailinzhi", email = "dailinzhi2012@163.com" },
]
dependencies = ["pytest>=8.3.4"]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.entry-points.pytest11]
result_log = "pytest_result_sender.plugin"

[tool.pdm.build]
pacage-dir = "src"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "flake8>=7.1.1",
]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = '''
/(
      \.git
    | \.hg
    | \.tox
    | venv
    | \.venv
    | buck-out
    | build
    | dist
)/
'''

[tool.pdm.scripts]
check = { composite = [
    "isort .",
    "black .",
    "flake8 .",
]}

test = "pytest"